<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_temp"
            android:icon="@drawable/ic_sun"
            android:title="@string/search_temperature" />
        <item
            android:id="@+id/nav_precipitation"
            android:icon="@drawable/ic_bubble"
            android:title="@string/precipitation_probability" />
        <item
            android:id="@+id/nav_run"
            android:icon="@drawable/ic_run"
            android:title="@string/just_tell_me_where_to_run" />

    </group>

    <item android:title="@string/application">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_Acount"
                android:icon="@drawable/ic_account"
                android:title="@string/my_acount" />
        </menu>
    </item>



</menu>
