<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.weathertest.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_temp"
        android:name="com.example.weathertest.ui.Temperature.TemperatureFragment"
        android:label="@string/menu_s_temperature"
        tools:layout="@layout/fragment_temperature" />
    <fragment
        android:id="@+id/nav_run"
        android:name="com.example.weathertest.ui.Run.RunFragment"
        android:label="@string/menu_run"
        tools:layout="@layout/fragment_run" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.weathertest.ui.Setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/nav_Acount"
        android:name="com.example.weathertest.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/nav_precipitation"
        android:name="com.example.weathertest.ui.Precipitation.PrecipitationFragment"
        android:label="@string/menu_precipitation"
        tools:layout="@layout/fragment_precipitation" />


</navigation>