<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/icon_account"
        android:layout_width="match_parent"
        android:layout_height="197dp"
        android:contentDescription="icon_account"
        app:layout_constraintTop_toBottomOf="@id/text_account"/>

    <Button
        android:id="@+id/B_capture_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/account_name"
        android:layout_marginTop="28dp"
        android:text="@string/capture" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/account_name"
        app:layout_constraintTop_toBottomOf="@id/icon_account"
        android:layout_marginTop="40dp"
        android:textColor="#000000"
        android:hint="@string/new_account_name"
    />
    <Button
        android:id="@+id/B_save_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/B_capture_account"
        android:layout_marginTop="28dp"
        android:text="@string/save" />


</androidx.constraintlayout.widget.ConstraintLayout>