<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_run"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/my_constraint"
        app:layout_constraintTop_toBottomOf="@id/text_run"
        android:layout_marginTop="40dp"
        android:textColor="#000000"
        android:hint="@string/ideal_wind"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_add_constraint"
        android:layout_marginTop="20dp"
        android:text="@string/add_constraint"
        app:layout_constraintTop_toBottomOf="@id/my_constraint"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_clear_constraint"
        android:layout_marginTop="65dp"
        android:text="@string/clear"
        app:layout_constraintTop_toBottomOf="@id/my_constraint"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idealConstrainRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fitsSystemWindows="true"
        android:padding="15dp"
        app:headerLayout="@layout/nav_header_main"
        app:layout_constraintTop_toBottomOf="@id/button_add_constraint"
        android:layout_marginTop="40dp"
        android:scrollbars="vertical"/>
</androidx.constraintlayout.widget.ConstraintLayout>