<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/search_city"
        app:layout_constraintTop_toBottomOf="@id/text_temperature"
        android:layout_marginTop="40dp"
        android:textColor="#000000"
        android:hint="@string/enter_your_city"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_add_temperature"
        android:layout_marginTop="20dp"
        android:text="@string/add_city"
        app:layout_constraintTop_toBottomOf="@id/search_city"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_add_clear_citylist"
        android:layout_marginTop="65dp"
        android:text="@string/clear"
        app:layout_constraintTop_toBottomOf="@id/search_city"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_city_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="15dp"
        app:headerLayout="@layout/nav_header_main"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/button_add_temperature"
        android:layout_marginTop="40dp"
        android:scrollbars="vertical"/>
</androidx.constraintlayout.widget.ConstraintLayout>